--- a/mailSending/package.json
+++ b/mailSending/package.json
@@ -4,7 +4,9 @@
   "description": "An example for pdf-puppeteer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "./node_modules/nodemon/bin/nodemon.js index.js"    
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "nodemailer": "6.4.11",
+    "nodemon": "2.0.4",
     "pdf-puppeteer": "file:../../pdf-puppeteer",
     "request": "2.88.2"
   }
