--- a/mailSending/package.json
+++ b/mailSending/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "8.2.0",
     "express": "^4.16.3",
+    "forever": "3.0.2",
     "nodemailer": "6.4.11",
     "nodemon": "2.0.4",
     "path": "0.12.7",
