--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "types": "index.d.ts",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "start": "node mailSending/index.js"
     },
     "repository": {
         "type": "git",
